<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.mfuertes.laurapp.lauraapp.Fragments.ptes_ic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        android:orientation="vertical">
        <EditText
            android:id="@+id/planta_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero"
            android:layout_marginBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/planta_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/edad"
            android:layout_marginBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/planta_motivo_ppal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="10"
            android:hint="@string/motivo_ppal"
            android:layout_marginBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/planta_motivo_sec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="10"
            android:hint="@string/motivo_sec"
            android:layout_marginBottom="@dimen/margin_bottom"/>
        <Button
            android:id="@+id/planta_adjuntar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adjuntar"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>
