<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.mfuertes.laurapp.lauraapp.Fragments.ptes_ic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sesion_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo"
            android:layout_marginBottom="@dimen/margin_bottom"/>

        <EditText
            android:id="@+id/sesion_sitio"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="4"
            android:gravity="top|left"
            android:maxLines="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sitio"
            android:layout_marginBottom="@dimen/margin_bottom"/>
        <EditText
            android:id="@+id/sesion_titulo"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="4"
            android:gravity="top|left"
            android:maxLines="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"
            android:layout_marginBottom="@dimen/margin_bottom"/>

        <DatePicker
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"/>
    </LinearLayout>

</ScrollView>
